src/index.scss
@import url('https://fonts.googleapis.com/css2?family=Catamaran:wght@300;400;500;700;800&family=Kaushan+Script&display=swap');

$cherry: rgba(58, 9, 11, 1);
$light-cherry: rgba(58, 9, 11, 0.25);
$pink: rgba(231, 113, 127, 1);
$light-pink: rgba(231, 113, 127, 0.25);
$gray: rgba(230, 230, 230, 1);
$white: #FFFFFF;

$title--xl: 4.5rem;
$title--lg: 3rem;
$title--md: 2rem;
$title--sm: 1.5rem;
$text--lg: 1.25rem;
$text--md: 1rem;
$text--sm: 0.75rem;

html {
  font-size: 16px;
}

body {
  position: relative;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  font-family: 'Catamaran', sans-serif;
  color: $cherry;
  font-size: 1rem;
  margin: 0;
}

.app {
  // border: 1px solid red;
  display: flex;
  flex-direction: column;
  max-width: 1400px;
  height: 100vh;
  margin: auto;
  background-image: url('../public/images/background.jpg');
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
  z-index: -1;
}

.app::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background-color: rgba(230, 230, 230, 0.5);
  z-index: -2;
}

.navbar {
  // border: 1px solid blue;
  position: sticky;
  top: 0;
  padding: 50px 150px;
  z-index: 100;

  .navlink {
    // border: 1px solid green;
    font-size: $text--md;
    letter-spacing: 1.4px;
    text-decoration: none;
    padding-right: 10%;
    color: $cherry;
  }

  .navlink.active {
    font-weight: 900;
  }
}

.btn {
  border-radius: 10px;
  text-decoration: none;
  font-size: $text--md;
  font-weight: 700;
  padding: 15px 20px;

  &.primary-btn {
    color: $white;
    background-color: $cherry;
  }

  &.secondary-btn {
    color: $cherry;
    border: 1px solid $cherry;
    background-color: $white;
  }
}

.home-page {
  position: relative;
  // border: 1px solid green;
  width: 100%;
  flex-grow: 1;
  margin-inline: auto;

  .home {
    // border: 1px solid pink;
    border-radius: 20px;
    background-color: $white;
    position: absolute;
    right: 150px;
    margin-left: 300px;
    margin-top: 20px;
    padding-top: 50px;
    padding-left: 160px;
    padding-right: 75px;

    .home-heading {
      margin-left: 65px;
    }

    h1 {
      font-size: $title--lg;
      font-weight: 400;
      margin: 0;

      span {
        font-size: $title--xl;
        font-family: 'Kaushan Script', cursive;
        color: $pink;
      }
    }

    h2 {
      font-size: $title--sm;
      font-weight: 100;
      letter-spacing: 2px;
      margin: 0;
    }

    .socials-description {
      // border: 1px solid green;
      display: flex;
      align-items: flex-start;
      padding-block: 20px 30px;

      .home-socials {
        padding-top: 30px;

        * {
          padding-bottom: 20px;
        }
      }
      
      p {
        font-size: $text--lg;
        letter-spacing: 0.15px;
        line-height: 45px;
        padding-left: 30px;
      }
    }

    .home-buttons {
      
      .primary-btn {
        padding-inline: 62px;
        margin-right: 10px;
        margin-left: 65px;
      }
    }

    .view-portfolio-container {
      // border: 1px solid blue;
      margin-block: 50px 70px;
      margin-inline: 65px;
      
      a {
        text-decoration: none;
        display: flex;
        align-items: center;

        p {
          font-size: $text--lg;
          color: $pink;
          margin-right: 5px;
        }
      }
    }
  }
}

.phone {
  // border: 1px solid purple;
  background-color: $white;
  position: absolute;
  top: 100px;
  left: 150px;
  border-radius: 15px;
  box-shadow: 10px 10px 30px 1px rgba(0, 0, 0, 0.5);
  z-index: 1;

  .phone-display {
    // border: 1px solid yellow;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: $pink;
    padding: 20px;
    margin: 15px;

    .avatar {
      border-radius: 50%;
      border: 2px solid $white;
    }

    h2 {
      font-size: $text--lg;
      font-weight: 300;
      letter-spacing: 2.4px;
      color: $white;

    }

  }

  .phone-control {
    text-align: center;

    .progress-meter {
      position: relative;
      width: 200px;
      height: 3px;
      background-color: $light-cherry;
      margin: 25px;
      border-radius: 3px;

      img {
        position: absolute;
        top: -24px;
        left: -24px;
      }
    }

    .control-buttons {
      // border: 1px solid green;
      display: flex;
      flex-direction: row;
      justify-content: center;
      align-items: center;
      margin: 30px;

      button {
        background-color: $white;
        border: none;
        padding-inline: 10px;
      }
    }
  }
}

